resolved overflow issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -120,7 +120,6 @@ a{
 
 .ptext .border{
   color:#ffff;
-  padding:20px;
 }
 
 .ptext .border .trans{
@@ -190,7 +189,6 @@ div.hidden{
   .ptext {
     line-height: 1.5em;
     font-size: 25px;
-    margin:15px;
     top: 25%;
   }
 
@@ -210,7 +208,7 @@ div.hidden{
   }
 
   #scroll{
-    right:20px;
+    right:5px;
     bottom:10px;
   }
 }
